--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-numpy = "*"
-opencv-contrib-python = "*"
-scipy = "*"
-matplotlib = "*"
+#opencv-contrib-python = "*"
+#scipy = "*"
+#matplotlib = "*"
 
 [requires]
 python_version = "3.6"
